# tiktok-battle-royale-3d

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
backend/: package.json
backend/src/: app.js  server.js
backend/test/: game.test.js
desktop/: index.html  package.json  tailwind.config.js  vite.config.js
desktop/src/: main.jsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: Arena.jsx
docs/: ARCHITECTURE.md  HUGGINGFACE.md
shared/: package.json
shared/src/: index.js
