[package]
name = "tiktok-battle-royale-3d"
version = "1.0.0"
description = "3D TikTok Battle Royale desktop client"
authors = ["Rizal"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
